# python-canonicaljson

./: .gitignore  .travis.yml  CHANGES.md  MANIFEST.in  README.rst  benchmark.py  canonicaljson.py  pyproject.toml  releasing.md  setup.cfg  setup.py  test_canonicaljson.py  tox.ini
.github/workflows/: tests.yaml
.travis/: install.sh
debian/: changelog  control  copyright  rules  watch
src/canonicaljson/: __init__.py
tests/: test_canonicaljson.py
