[metadata]
name = canonicaljson
description = Canonical JSON
long_description = file: README.rst
long_description_content_type = text/x-rst
version = attr: canonicaljson.__version__
keywords = json
url = https://github.com/matrix-org/python-canonicaljson
license = Apache License, Version 2.0
author = Matrix.org Team and Contributors
author_email = packages@matrix.org
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3


[options]
zip_safe = true
python_requires = >=3.7

package_dir = =src
packages =
  canonicaljson

install_requires =
    # simplejson versions before 3.14.0 had a bug with some characters
    # (e.g. \u2028) if ensure_ascii was set to false.
    simplejson>=3.14.0
    # typing.Protocol was only added to the stdlib in Python 3.8
    typing_extensions>=4.0.0; python_version < '3.8'


[options.extras_require]
# frozendict support can be enabled using the `canonicaljson[frozendict]` syntax
frozendict =
    frozendict>=1.0


[options.package_data]
canonicaljson = py.typed


[flake8]
# see https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
# for error codes. The ones we ignore are:
#  E501: Line too long (black enforces this for us)
ignore=E501
